<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8e2e4"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_corner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Control Room Temperature"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/title_tv"
                android:onClick="exit"
                android:src="@drawable/logout" />


        </RelativeLayout>


    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cd"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="75dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/temperature" />

                <TextView
                    android:id="@+id/currentTemp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/current_temperature_50_c"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/currentHum_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/current_humidity_50"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/cd"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <TextView
                    android:id="@+id/maxTemp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/max_temperature_50_c"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/change_temp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/maxTemp_tv"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:onClick="change"
                    android:textStyle="bold"
                    android:text="@string/change"
                    android:textColor="#bbb8b8"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cd2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/lamp_iv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="50dp"
                    android:src="@drawable/light_off" />


                <ImageView
                    android:id="@+id/fan_iv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/fan_on"

                    />


            </LinearLayout>

            <Button
                android:id="@+id/connect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_backgroung"
                android:onClick="connect"
                android:padding="10dp"
                android:text="@string/connect"
                android:textSize="20sp" />

            <Button
                android:id="@+id/begin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_backgroung"
                android:onClick="start_flow"
                android:padding="10dp"
                android:text="@string/begin"
                android:textSize="20sp"
                android:visibility="gone" />


        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/developed_by_mohamed_hassan_amp_amp_maged_magdy" />

</RelativeLayout>